Fix handling of divider_color admin setting
This commit changes the handling of the divider_color setting to
set the root CSS variable instead of setting the CSS variable as
an inline style. This commit also includes some minor changes
listed below.

- Fix layout issues with form labels
- Fix Block design page padding.
- Hide Bootstrap Slider tooltip.

modified: css/base/layout.css
modified: css/base/typography.css
modified: css/base/variables.css
modified: css/dxpr-theme.admin.themesettings.css
modified: js/dist/dxpr-theme-settings.admin.js
modified: js/minified/dxpr-theme-settings.admin.min.js
modified: scss/base/layout.scss
modified: scss/base/typography.scss
modified: scss/base/variables.scss
modified: scss/dxpr-theme.admin.themesettings.scss

--- a/scss/base/layout.scss
+++ b/scss/base/layout.scss
@@ -98,6 +98,8 @@ body.full-width-content {
   padding: var(--dxpr-setting-block-padding);
   border-color: var(--dxpr-setting-block-border-color);
   border-radius: var(--dxpr-setting-block-border-radius);
+  border-style: solid;
+  border-width: var(--dxpr-setting-block-border);
   background-color: var(--dxpr-setting-block-background);
 }
 .region-block-design .block-title,
