--- a/scss/base/typography.scss
+++ b/scss/base/typography.scss
@@ -146,7 +146,7 @@ h1, h2, h3, h4, h5, h6, .navbar-brand, th, .nav-tabs > li > a {
   max-width: 100%;
 }
 
-hr {
+hr, .card hr {
   height: 0;
   border-top: 4px solid dxpr-color('card');
   margin: 20px auto 20px var(--dxpr-setting-divider-position);
@@ -162,7 +162,7 @@ hr {
 .dxpr-theme-footer hr {
   border-top-color: dxpr-color('footertext');
 }
-.card hr,
+
 .jumbotron hr {
   border-top-color: dxpr-color('cardtext'); // card text color
 }
