--- a/scss/base/variables.scss
+++ b/scss/base/variables.scss
@@ -242,7 +242,7 @@ $schemes: (
   --dxpr-setting-block-border-radius: 0px;
   --dxpr-setting-block-border: 0px;
   --dxpr-setting-block-divider-color: var(--dxpr-color-cardtext);
-  --dxpr-setting-block-divider-length: 10px;
+  --dxpr-setting-block-divider-length: 0px;
   --dxpr-setting-block-divider-spacing: 20px;
   --dxpr-setting-block-divider-thickness: 4px;
   --dxpr-setting-block-padding: 0px;
@@ -256,7 +256,7 @@ $schemes: (
   --dxpr-setting-body-mobile-font-size: 14px;
   --dxpr-setting-box-max-width: 1580px;
   --dxpr-setting-boxed-layout-boxbg: #ffffff;
-  --dxpr-setting-divider-color: var(--dxpr-color-card);
+  --dxpr-setting-divider-color: var(--dxpr-color-cardtext);
   --dxpr-setting-divider-length: 100%;
   --dxpr-setting-divider-position: auto;
   --dxpr-setting-divider-thickness: 4px;
